fix(card): text overflow cleanup

--- a/core/src/components/card/card.scss
+++ b/core/src/components/card/card.scss
@@ -71,7 +71,7 @@
 
   .card-body {
     display: block;
-    overflow-wrap: break-word;
+    word-wrap: break-word;
   }
 
   slot[name='card-body']::slotted(*) {
@@ -81,6 +81,7 @@
     padding: 0 16px;
     margin-bottom: 16px;
     margin-top: 16px;
+    max-width: 336px;
   }
 
   slot[name='card-bottom']::slotted(*) {
